--- a/style.css
+++ b/style.css
@@ -284,12 +284,13 @@ body {
 
 .input-group {
     margin-bottom: 15px;
+    text-align: center;
 }
 
 /* Perbaikan untuk input ID dan Server ID */
 .input-group input[type="text"] {
     width: 100%;
-    max-width: 400px; /* Batasi lebar maksimum */
+    max-width: 350px; /* Lebar maksimum baru */
     padding: 12px 15px;
     border: 2px solid var(--border-color);
     border-radius: 10px;
@@ -297,6 +298,8 @@ body {
     color: var(--text-color-primary);
     transition: border-color 0.3s, box-shadow 0.3s;
     outline: none;
+    margin: 0 auto; /* Tengah-kan input */
+    display: block;
 }
 
 .input-group input[type="text"]:focus {
@@ -425,11 +428,10 @@ body {
     gap: 8px;
 }
 
-/* Perbaikan untuk input voucher */
 .voucher-group input {
     flex-grow: 1;
-    width: auto; /* Memastikan lebar menyesuaikan */
-    border-radius: 10px; /* Membuat sudut membulat */
+    width: auto;
+    border-radius: 10px;
     padding: 12px 15px;
     border: 2px solid var(--border-color);
     outline: none;
